# ChangeLog for xfce-extra/exo
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/exo/ChangeLog,v 1.26 2007/01/22 02:12:39 nichoj Exp $

*exo-0.3.2 (22 Jan 2007)

  22 Jan 2007; Joshua Nichols <nichoj@gentoo.org> +exo-0.3.2.ebuild:
  Version bump.

  29 Dec 2006; <fauli@gentoo.org> exo-0.3.0-r1.ebuild:
  stable on x86, bug #158082

  28 Dec 2006; Joshua Nichols <nichoj@gentoo.org> exo-0.3.0-r1.ebuild:
  Fixed dependencies, see bug #130573.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org> exo-0.3.0-r1.ebuild:
  Stable on ppc64; bug #158082

*exo-0.3.1.12_rc2-r1 (11 Dec 2006)

  11 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +exo-0.3.1.12_rc2-r1.ebuild:
  Added doc use flag for generating gtk-doc stuff, see bug #86483. Added
  python use flag for python bindings. Cleaned up dependencies.

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -exo-0.2.0-r1.ebuild,
  -exo-0.3.0_pre1.ebuild, -exo-0.3.1.6_beta1.ebuild,
  -exo-0.3.1.8_beta2.ebuild:
  Pruned older versions with equal or lesser keywords.

  06 Dec 2006; Elfyn McBratney <beu@gentoo.org> exo-0.3.1.12_rc2.ebuild:
  Add back required SRC_URI.

  11 Dec 2006; Joshua Nichols <nichoj@gentoo.org> exo-0.2.0-r1.ebuild,
  exo-0.3.0_pre1.ebuild:
  Updated dependencies for modular dbus, see bug #154521.

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org> exo-0.3.1.12_rc2.ebuild:
  Fixed SRC_URI. Reported by drac.

*exo-0.3.1.12_rc2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> +exo-0.3.1.12_rc2.ebuild:
  Version bump for RC2. See bug #146563.

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> exo-0.3.1.8_beta2.ebuild:
  Added dev-perl/URI dep thanks to golk@gmx.net.

*exo-0.3.1.8_beta2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +exo-0.3.1.8_beta2.ebuild:
  Xfce beta 2 builds.

*exo-0.3.1.6_beta1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org> +exo-0.3.1.6_beta1.ebuild:
  Version bump for 4.4_beta1.
