@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xarchiver
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.16 2007/01/21 21:52:38 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xarchiver/ChangeLog,v 1.17 2007/01/23 21:13:56 welp Exp $
+
+  23 Jan 2007; Peter Weller <welp@gentoo.org> xarchiver-0.4.6.ebuild:
+  Fix depends for bug 163244. Fix meta builds.
 
   21 Jan 2007; Peter Weller <welp@gentoo.org> xarchiver-0.4.6.ebuild:
   Removed ace and rpm deps as are uneeded. Bug #107672
