@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/exo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/exo/ChangeLog,v 1.26 2007/01/22 02:12:39 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/exo/ChangeLog,v 1.27 2007/01/23 21:08:57 welp Exp $
+
+  23 Jan 2007; Peter Weller <welp@gentoo.org> exo-0.3.2.ebuild:
+  Fix depends for bug 163244. Fix meta builds.
 
 *exo-0.3.2 (22 Jan 2007)
 
